samples/_failures_safe/1761701524_112971_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ea75698.c: In function ‘main’:
./samples/SAFE/__tmp_1ea75698.c:152:12: error: missing terminating " character
  152 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_1ea75698.c:152:5: error: expected expression at end of input
  152 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_1ea75698.c:152:5: error: expected declaration or statement at end of input
